# gRPC_server

./: .env  .gitignore  Cargo.toml  LEARN.md  LEARN_en.md  README.md  README_en.md  build.rs  diesel.toml
proto/: calendar.proto  control.proto  hello.proto
settings/: settings.json
src/: admin.rs  calendar.rs  client.rs  hook.rs  main.rs  models.rs  schema.rs
