[package]
name = "proto_server"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.12.3"
tokio = {version="1.43.0", features=["full"]}
prost = "0.13.5"
tonic-reflection = "0.12.3"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
dotenv = "0.15.0"
r2d2 = "0.8.10"
chrono = { version = "0.4.39", features = ["serde"] }
prost-types = "0.13.5"
lazy_static = "1.5.0"
r2d2-diesel = "1.0.0"
diesel = { version = "2.2.7", features = ["postgres", "r2d2"] }
diesel_cli = { version = "2.2.7", default-features = false, features = ["postgres"] }
actix-web = "4.9.0"

[build-dependencies]
tonic-build = "0.12.3"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "hook"
path = "src/hook.rs"
